fix MDEV-4738 INSERT DELAYED on a SPIDER table doesn't produce ER_DELAYED_NOT_SUPPORTED, doesn't work like delayed, and doesn't honor lock_wait_timeout like normal INSERT